# lab-1-PBCT

./: ЛР1_ СтатичБибл.docx
consoleApp/: CMakeLists.txt  MyExecRefsLib.cpp
lib/: CMakeLists.txt  MathFuncsLib.cpp  MathFuncsLib.h
